--- a/QA.mediawiki
+++ b/QA.mediawiki
@@ -12,6 +12,7 @@ Benchmarks/ Optimization, Quality-Analysis(QA), CI, Test-Driven-Development (TDD
 * [https://github.com/simonster/MatlabCluster.jl Julia cluster manager for Matlab Job Scheduler]
 * [https://github.com/loladiro/OpenStack.jl OpenStack.jl]
 * [https://github.com/BenLauwens/SimJulia.jl SimJulia.jl ], a process-oriented simulation library written in Julia.
+* Jake.jl :: [https://github.com/nolta/Jake.jl Rake for Julia].
 
 
 == CI ==
