--- a/README.mediawiki
+++ b/README.mediawiki
@@ -4,16 +4,17 @@ Curated bits and bytes of [https://github.com/JuliaLang Julia] language learning
 
 == Pages ==
 * [https://github.com/svaksha/julya/blob/master/AI-ML-NLP.mediawiki AI-ML-NLP]
+* [https://github.com/svaksha/julya/blob/master/Computing-Platform.mediawiki Computing Platforms (ARM, MIPS, GPU), HPC and other libs]
 * [https://github.com/svaksha/julya/blob/master/Cookbook.mediawiki Cookbook]
 * [https://github.com/svaksha/julya/blob/master/Database.mediawiki Database]
 * [https://github.com/svaksha/julya/blob/master/Desktop-Utilities.mediawiki Desktop Utilities]
-* [https://github.com/svaksha/julya/blob/master/Graph-Visualization.mediawiki Graphs and Visualization tools]
+* [https://github.com/svaksha/julya/blob/master/Finance.mediawiki Finance, Quant, Statistics].
+* [https://github.com/svaksha/julya/blob/master/Graphics-Visualization Graphics and Visualization tools]
 * [https://github.com/svaksha/julya/blob/master/JULYA.mediawiki JULYA]
-* [https://github.com/svaksha/julya/blob/master/Computing-Platform.mediawiki Computing Platforms (ARM, MIPS, GPU), HPC and other libs]
-* [https://github.com/svaksha/julya/blob/master/Math-Science.mediawiki Science, Mathematics and Statistics]
+* [https://github.com/svaksha/julya/blob/master/Mathematics.mediawiki Mathematics]
 * [https://github.com/svaksha/julya/blob/master/Networking-Web.mediawiki Networking-Web]
 * [https://github.com/svaksha/julya/blob/master/QA.mediawiki QA]
-
+* [https://github.com/svaksha/julya/blob/master/Science.mediawiki Science (Physics, Chemistry, Biology, ...)]
 
 
 === Contributing ===
