--- a/README.mediawiki
+++ b/README.mediawiki
@@ -7,7 +7,6 @@ Curated bits and bytes of [https://github.com/JuliaLang Julia] language learning
 * [https://github.com/svaksha/julya/blob/master/Computing-Platform.mediawiki Computing Platforms (ARM, MIPS, GPU), HPC and other libs]
 * [https://github.com/svaksha/julya/blob/master/Cookbook.mediawiki Cookbook]
 * [https://github.com/svaksha/julya/blob/master/Database.mediawiki Database]
-* [https://github.com/svaksha/julya/blob/master/Desktop-Utilities.mediawiki Desktop Utilities]
 * [https://github.com/svaksha/julya/blob/master/Finance.mediawiki Finance, Quant, Statistics].
 * [https://github.com/svaksha/julya/blob/master/Graphics-Visualization Graphics and Visualization tools]
 * [https://github.com/svaksha/julya/blob/master/JULYA.mediawiki JULYA]
@@ -15,11 +14,13 @@ Curated bits and bytes of [https://github.com/JuliaLang Julia] language learning
 * [https://github.com/svaksha/julya/blob/master/Networking-Web.mediawiki Networking-Web]
 * [https://github.com/svaksha/julya/blob/master/QA.mediawiki QA]
 * [https://github.com/svaksha/julya/blob/master/Science.mediawiki Science (Physics, Chemistry, Biology, ...)]
+* [https://github.com/svaksha/julya/blob/master/Utilities.mediawiki Utilities]
 
 
 === Contributing ===
 * As per the topic, add your link, with notes (if any) to the respective mediawiki files above.
 * Then, send a pull request (PR) to https://github.com/svaksha/julya/pulls
+'''Note:''' JULYA is a WIP, with frequent changes and reordering of files as new libraries are constantly being added to a new growing language.
 
 
 === LICENSE ===
