--- a/AI-ML-NLP.mediawiki
+++ b/AI-ML-NLP.mediawiki
@@ -1,4 +1,4 @@
-AI, Algorithms, Data Mining, Data Structures, Machine Learning, NLP, ...
+AI, Algorithms, Data Mining, (Array) Data Structures, Machine Learning, NLP, ...
 
 
 = ALGORITHMS =
@@ -12,8 +12,11 @@ AI, Algorithms, Data Mining, Data Structures, Machine Learning, NLP, ...
 == Clustering algorithms ==
 * Clustering.jl:: Basic functions for [https://github.com/johnmyleswhite/Clustering.jl [clustering data: k-means, dp-means], etc..
 
-== Data Structures ==
+== (Array) Data Structures ==
 * [http://julialang.org/Graphs.jl/index.html Documentation for Graphs.jl], a Julia package that provides graph types and algorithms.
+* ImmutableArrays.jl:: [https://github.com/twadleigh/ImmutableArrays.jl Statically-sized immutable vectors and matrices].
+* ArrayViews.jl :: A Julia package to [https://github.com/lindahua/ArrayViews.jl explore a new system of array views].
+* [https://github.com/davidavdav/NamedArray NamedArray], a Julia type that implements a drop-in replacement of Array with named dimensions and Dict-type indexes.
 
 
 = ML, DATA SCIENCE =
