--- a/Computing-Platform.mediawiki
+++ b/Computing-Platform.mediawiki
@@ -1,9 +1,19 @@
-'''Hardware arch (ARM, MIPS, GPU), language API, HPC, software libraries and runtime libraries.'''
+'''Hardware arch (ARM, MIPS, GPU, CUDA), language API, HPC, software libraries and runtime libraries.'''
 
 
 = Programming/ Language API =
 == LLVM ==
 * Clang.jl:: Julia interface to [https://github.com/ihnorton/Clang.jl libclang and C wrapper generator] and its fork [https://github.com/vtjnash/CIndex.jl CIndex.jl] to access the libclang interface of the LLVM Clang compiler.
+
+== ARM, MIPS, GPU ==
+* Bug status of the [https://github.com/JuliaLang/julia/issues/3134 Julia port to ARM] and the [https://buildd.debian.org/status/fetch.php?pkg=julia&arch=armhf&ver=0.1.2%2Bdfsg-3&stamp=1368675598 Debian build log]
+* CUDA.jl :: [https://github.com/lindahua/CUDA.jl package wraps key functions in CUDA Driver API] for Julia.
+* [http://www.yeppp.info/ Yeppp!] is a low level, high performance library for vectorized operations, elementwise operation on arrays. It supports the x86(-64), ARM and MIPS architectures, and takes advantage of a lot of SIMD extensions (from SSE to AVX2 on x86, NEON on ARM). The New BSD(3-clause BSD)-licensed [https://bitbucket.org/MDukhan/yeppp source code is hosted on Bitbucket].
+* Sample notebooks for: [http://nbviewer.ipython.org/7436359 GPU Julia], and [http://nbviewer.ipython.org/7436439 GPU Transpose].
+
+
+== Digital Signal Processing (DSP) ==
+* The [https://github.com/JuliaDSP/DSP.jl DSP ver-0.0.1 package] includes functions for periodogram estimation, generating window functions, filter design and FFT-based FIR filtering, works on Julia 0.2 and 0.3-prerelease. The [http://dspjl.readthedocs.org/en/latest/ documentation] is available via RTD.org.
 
 
 == Java ==
@@ -17,17 +27,6 @@
 
 == OpenCL API ==
 * [https://github.com/jakebolewski/OpenCL.jl OpenCL bindings for Julia] is a cross platform API for programming parallel devices, with implementations from AMD, Nvidia, Intel, and others; similar in scope to PyOpenCL. 
-
-
-
-= ARM, MIPS, GPU = 
-* Bug status of the [https://github.com/JuliaLang/julia/issues/3134 Julia port to ARM] and the [https://buildd.debian.org/status/fetch.php?pkg=julia&arch=armhf&ver=0.1.2%2Bdfsg-3&stamp=1368675598 Debian build log]
-* [http://www.yeppp.info/ Yeppp!] is a low level, high performance library for vectorized operations, elementwise operation on arrays. It supports the x86(-64), ARM and MIPS architectures, and takes advantage of a lot of SIMD extensions (from SSE to AVX2 on x86, NEON on ARM). The New BSD(3-clause BSD)-licensed [https://bitbucket.org/MDukhan/yeppp source code is hosted on Bitbucket].
-* Sample notebooks for: [http://nbviewer.ipython.org/7436359 GPU Julia], and [http://nbviewer.ipython.org/7436439 GPU Transpose].
-
-
-== Digital Signal Processing (DSP) ==
-* The [https://github.com/JuliaDSP/DSP.jl DSP ver-0.0.1 package] includes functions for periodogram estimation, generating window functions, filter design and FFT-based FIR filtering, works on Julia 0.2 and 0.3-prerelease. The [http://dspjl.readthedocs.org/en/latest/ documentation] is available via RTD.org.
 
 
 
