--- a/Graphics-Visualization.mediawiki
+++ b/Graphics-Visualization.mediawiki
@@ -8,6 +8,7 @@ Graphics, Plots and other Visualization libraries and packages. Also includes bl
 * Images.jl:: [https://github.com/timholy/Images.jl An image library] for Julia.
 * ImageView.jl:: An [https://github.com/timholy/ImageView.jl interactive display of images and movies].
 * Compose.jl:: [https://github.com/dcjones/Compose.jl Declarative vector graphics].
+* ImageTerm.jl :: https://github.com/meggart/ImageTerm.jl Julia functions to plot colorful maps] in the terminal.
 
 
 == Plotting ==
