--- a/Finance.mediawiki
+++ b/Finance.mediawiki
@@ -8,6 +8,7 @@ All things Finance, Statistics, Numerical analysis, ....
 * TradeModels.jl :: [https://github.com/JuliaQuant/TradeModels.jl Modeling the allocation of resources to markets based on the restraints of objective functions].
 * MarketTechnicals.jl :: [https://github.com/JuliaQuant/MarketTechnicals.jl Technical analysis of financial time series] in Julia.
 * FinancialBlotter.jl :: [https://github.com/JuliaQuant/FinancialBlotter.jl Financial Instruments and Accounting] in Julia.
+* GLM.jl :: [https://github.com/JuliaStats/GLM.jl Linear models (LM's) and generalized linear models (GLM's)] in Julia.
 
 
 = Statistics =
