--- a/QA.mediawiki
+++ b/QA.mediawiki
@@ -1,14 +1,14 @@
 Benchmarks/ Optimization, Quality-Analysis(QA), CI, Test-Driven-Development (TDD), Behaviour-Driven-Development (BDD), anything "Quality" related goes here:
 
 
-== Benchmarks ==
+= Benchmarks =
 * [http://speed.julialang.org Microbenchmark timings are on speed.julialang.org]
     ** [http://speed.julialang.org/timeline/ Timeline]
 * [https://github.com/JuliaLang/julia/blob/master/test/perf/kernel/raytracer.jl Raytracer in the Julia kernel]
 * More [https://github.com/jakebolewski/rays Raytracers].
 
 
-== Build Automation ==
+= Build Automation =
 * [https://github.com/simonster/MatlabCluster.jl Julia cluster manager for Matlab Job Scheduler]
 * [https://github.com/loladiro/OpenStack.jl OpenStack.jl]
 * [https://github.com/BenLauwens/SimJulia.jl SimJulia.jl ], a process-oriented simulation library written in Julia.
