--- a/QA.mediawiki
+++ b/QA.mediawiki
@@ -1,47 +1,29 @@
-Benchmarks/ Optimization, Quality-Analysis(QA), CI, Test-Driven-Development (TDD), Behaviour-Driven-Development (BDD), anything "Quality" related goes here:
+Benchmarks/ Optimization, Quality-Analysis(QA), Test-Driven-Development (TDD), Behaviour-Driven-Development (BDD), Unit testing, anything "Software Quality" related goes here:
 
 
-= Benchmarks =
+= BENCHMARKS =
 * [http://speed.julialang.org Microbenchmark timings are on speed.julialang.org]
     ** [http://speed.julialang.org/timeline/ Timeline]
 * [https://github.com/JuliaLang/julia/blob/master/test/perf/kernel/raytracer.jl Raytracer in the Julia kernel]
 * More [https://github.com/jakebolewski/rays Raytracers].
 
-
-= Build Automation =
-* [https://github.com/simonster/MatlabCluster.jl Julia cluster manager for Matlab Job Scheduler]
-* [https://github.com/loladiro/OpenStack.jl OpenStack.jl]
-* [https://github.com/BenLauwens/SimJulia.jl SimJulia.jl ], a process-oriented simulation library written in Julia.
-* Jake.jl :: [https://github.com/nolta/Jake.jl Rake for Julia].
-
-
-== CI ==
-* Merge your Julia code with mainline to test it on a [https://travis-ci.org/JuliaLang/ Travis-CI] build server.
-
-
-== Logging= 
+=== Logging ===
 * Lumberjack.jl:: A [https://github.com/forio/Lumberjack.jl logging library] for Julia, by Westley Hennigh.
 
-
-== Optimization == 
+=== Optimization === 
 * [http://juliaopt.org/ JuliaOpt] is an umbrella group for Julia-based optimization-related projects.
 * [https://github.com/Staross/JuliaCMAES CMA-ES port] - a mix of the original minimal matlab implementation (purecmaes.m) and the full one (cmaes.m).
 * [https://github.com/robertfeldt/BlackBoxOptim.jl BlackBoxOptim.jl] is a (experimental, work-in-progress) global optimization framework for Julia, supporting both multi- and single-objective optimization problems, focused on (meta-)heuristic/stochastic algorithms (DE, PSO, CMA-ES etc).
 
-
-== Packaging ==
-* A [https://gist.github.com/IainNZ/6086173 Julep for package requirements and quality standards]
-* The [https://github.com/IainNZ/PackageEvaluator.jl Julia package evaluator] and the [http://iaindunning.com/PackageEval/ results]
-* WinRPM.jl :: [https://github.com/JuliaLang/WinRPM.jl RPM-md processing library] - WinRPM is an installer for RPM packages provided by an RPM-md build system.
-
-== Profiling ==
+=== Profiling ===
 Profile your code
 * Use [http://docs.julialang.org/en/latest/stdlib/profile/ IProfile] in Base to profile your code.
 
-
-== Sandbox == 
+=== Sandbox === 
 * [https://github.com/amitmurthy/JDock An IJulia sandboxed by Docker containers].
 
 
-== UnitTest ==
+= TESTING =
+=== UnitTest ===
 * Fixtures.jl :: provides [https://github.com/burrowsa/Fixtures.jl fixtures, mocks, matchers and patching to improve your tests] with Julia.
+
