--- a/Utilities.mediawiki
+++ b/Utilities.mediawiki
@@ -37,5 +37,5 @@
 
 === REPL on the Cloud ===
 * Use [https://cloud.sagemath.com Julia on the SageMath cloud server].
-
+* koding.com has [https://koding.com/Julia an interactive REPL] online.
 
