--- a/README.mediawiki
+++ b/README.mediawiki
@@ -5,21 +5,22 @@ Curated bits and bytes of [https://github.com/JuliaLang Julia] language learning
 = Pages =
 * [https://github.com/svaksha/julya/blob/master/AI-ML-NLP.mediawiki AI-ML-NLP]
 * [https://github.com/svaksha/julya/blob/master/API.mediawiki API for Hardware arch (ARM, MIPS, GPU, CUDA), language API, HPC, and other libraries.]
+* [https://github.com/svaksha/julya/blob/master/Build-Automation.mediawiki Build automation, Build automation software, CI/CD, Packaging, RE/RM, SCM, ...]
 * [https://github.com/svaksha/julya/blob/master/Cookbook.mediawiki Cookbook]
 * [https://github.com/svaksha/julya/blob/master/Database.mediawiki Database]
-* [https://github.com/svaksha/julya/blob/master/Finance.mediawiki Finance, Quant, Statistics].
-* [https://github.com/svaksha/julya/blob/master/Graphics-Visualization Graphics and Visualization tools]
+* [https://github.com/svaksha/julya/blob/master/Finance.mediawiki Finance, Quant, Statistics, ...]
+* [https://github.com/svaksha/julya/blob/master/Graphics-Visualization Graphics, Visualization tools, ...]
 * [https://github.com/svaksha/julya/blob/master/JULYA.mediawiki JULYA]
-* [https://github.com/svaksha/julya/blob/master/Mathematics.mediawiki Mathematics]
+* [https://github.com/svaksha/julya/blob/master/Mathematics.mediawiki Algebra, Geometry, Statistics, ...]
 * [https://github.com/svaksha/julya/blob/master/Networking-Web.mediawiki Networking-Web]
-* [https://github.com/svaksha/julya/blob/master/QA.mediawiki QA]
+* [https://github.com/svaksha/julya/blob/master/QA.mediawiki TDD, Benchmarks, profiling,..]
 * [https://github.com/svaksha/julya/blob/master/Science.mediawiki Science (Physics, Chemistry, Biology, ...)]
 * [https://github.com/svaksha/julya/blob/master/Utilities.mediawiki Utilities]
 
 
 === Contributing ===
 * As per the topic, add your link, with notes (if any) to the respective mediawiki files above and send a pull request (PR) to https://github.com/svaksha/julya/pulls
-'''Note:''' JULYA is a WIP, with frequent changes and reordering of files as new libraries are constantly being added to a new growing language.
+'''Note:''' As a new language in the scientific computing scene, new libraries are constantly being added into Julia, so there will be frequent changes and reordering of the mediawiki pages.
 
 
 === LICENSE ===
